CCD-4600: Add jvm args to resolve smoke test issue